[package]
name = "steel_ex"
version = "0.0.1"
authors = []
edition = "2021"

[lib]
name = "steel_ex"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36.2"
steel-core = { git = "https://github.com/mattwparas/steel.git", branch = "master" }
steel-repl = { git="https://github.com/mattwparas/steel.git", branch = "master" }
